<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.project_b.se2.mauerhuepfer.OptionsActivity">

    <TextView
        android:id="@+id/lable_option"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/optionLbl"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/lable_player"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/playerLbl"
        android:textSize="20dp"
        android:layout_below="@+id/lable_option"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textColor="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/text_player"
        android:layout_below="@+id/lable_option"
        android:layout_alignRight="@+id/lable_player"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/playerLbl_hint" />

    <TextView
        android:id="@+id/lable_host"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/hostLbl"
        android:textSize="20dp"
        android:layout_below="@+id/lable_player"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/text_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/text_player"
        android:layout_alignRight="@+id/lable_host"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/hostLbl_hint" />


</RelativeLayout>
