<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/layout_nearby_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="2dp"
        android:visibility="gone"
        tools:visibility="visible">

        <Button
            android:id="@+id/button_advertise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advertise" />

        <Button
            android:id="@+id/button_discover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discover" />

    </LinearLayout>

    <TextView
        android:id="@+id/debug_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/layout_nearby_buttons"
        android:layout_marginBottom="55dp"
        android:layout_marginTop="55dp"
        android:background="#FFFFFF"
        android:fadeScrollbars="false"
        android:gravity="bottom"
        android:lines="10"
        android:maxLines="10"
        android:padding="5dp"
        android:scrollbars="vertical" />

    <LinearLayout
        android:id="@+id/layout_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <EditText
            android:id="@+id/edittext_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/message" />

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />

    </LinearLayout>

    <Button
        android:id="@+id/button_startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/layout_nearby_buttons"
        android:text="@string/startGame" />

</RelativeLayout>
